--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "./src/server.js",
   "type": "module",
   "scripts": {
-    "start": "node ./src/server.js",
-    "dev": "npx nodemon ./src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js",
+    "dev": "nodemon -L src/server.js"
   },
   "repository": {
     "type": "git",
